<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Home Workout Fitness and Diet plan</string>
    <string name="admob_app_id">ca-app-pub-2329262901732245~1848049239</string>
    <string name="banner_ad">ca-app-pub-2329262901732245/5595722558</string>
    <string name="g_native">ca-app-pub-2329262901732245/9858648612</string>
    <string name="interstitial_key">ca-app-pub-2329262901732245/5210146530</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="email">Gmail</string>
    <string name="pref_notification_message_value">Hey… Lets drink some water…</string>
    <string name="add_info_text">Please provide some information to customize the experience for you…!!</string>
    <string name="str_continue">Continue</string>
    <string name="enter_your_name_hint">Enter your name</string>
    <string name="age_hint">Enter your age</string>
    <string name="weight_hint">Enter your weight in Kg</string>
    <string name="custom_intake_hint">Enter your custom intake target in ml</string>
    <string name="workout_hint">Your daily work out time in min/day</string>
    <string name="wakeup_hint">Your wake up time</string>
    <string name="sleeping_hint">Your Sleep time</string>
    <string name="tagline_text">Lets keep you hydrated…</string>
    <string name="get_started">Get Started</string>
    <string name="edit_info_text">Edit Your Info</string>
    <string name="update">Update</string>
    <string name="notif_setting_header">Notification Settings</string>
    <string name="notif_messsage_hint">Notification Message</string>
    <string name="notif_tone_hint">Notification Tone</string>
    <string name="notif_freq_hint">Notification Frequency</string>
    <string name="walkthrough_text_one">Water is 60 percent of your body weight. Your body depends on water to
        survive.
    </string>
    <string name="walkthough_text_two">Lack of water can lead to dehydration. Even mild dehydration can drain you and
        make you tired.
    </string>
    <string name="walkthrough_text_three">Every cell, tissue and organ in your body needs water to work properly.
    </string>
    <string name="Abnormally_Slim">Abnormally Slim</string>
    <string name="Acceptable">Acceptable</string>
    <string name="Active">Active</string>
    <string name="Adults">Adults</string>
    <string name="Aerobic_exercise">Aerobic exercise</string>
    <string name="Age">Age</string>
    <string name="Age_Group_Under17">Age Group : Under 17</string>
    <string name="Age_Group_Under35">Age Group : Under 35</string>
    <string name="Age_Group_Under35over">Age Group : 35 and over</string>
    <string name="Age_of_Child_in_Months">Age of Child in Months</string>
    <string name="Alcohol_Effects">Alcohol Effects</string>
    <string name="Alcohol_Effects_by_BAC_level">Alcohol Effects by BAC level</string>
    <string name="Alcohol_level">Alcohol \10 level%</string>
    <string name="Apathy_impaired">Apathy, impaired consciousness, stupor, significantly decreased response to stimulation, severe muscular incoordination, inability to stand or walk, vomiting, incontinence of urine and feces</string>
    <string name="Approximate_Calories_Burned">Approximate Calories Burned</string>
    <string name="Athletes">Athletes</string>
    <string name="Average">Average</string>
    <string name="Average_individual_appears_normal">Average individual appears normal</string>
    <string name="BAC_level">Your Blood Alcohol Content level is</string>
    <string name="Bicycling">Bicycling</string>
    <string name="Bill_Rogers_move_over">Bill Rogers move over!</string>
    <string name="Blood_Alcohol_Content">Blood Alcohol Content</string>
    <string name="Blood_Donation_Time_Calculator">Blood Donation Time Calculator</string>
    <string name="Blood_Pressure_Calculator">Blood Pressure Calculator</string>
    <string name="Blood_Pressure_Category">Blood Pressure Category</string>
    <string name="Blood_Sugar">Your Blood Sugar Level is :</string>
    <string name="Blood_Sugar_Conversion">Blood Sugar Conversion</string>
    <string name="Blood_Sugar_level_mg">Blood sugar level in mg/dl</string>
    <string name="Blood_Sugar_level_mmol">Blood Sugar level in mmol/l</string>
    <string name="Body_Fat_Calculator">Body Fat Calculator</string>
    <string name="Body_Fat_Percentage_Comparison_Table">Body Fat Percentage Comparison Table</string>
    <string name="Body_Fat_Percentage_for_Men_and_Women">Body Fat Percentage for Men and Women</string>
    <string name="Body_Mass_Index_Calculator">Body Mass Index Calculator</string>
    <string name="Body_frame_size">Body Frame Size Calculator</string>
    <string name="Body_frame_text">Your Body Frame Size is</string>
    <string name="Body_frame_text_large">Large</string>
    <string name="Body_frame_text_medium">Medium</string>
    <string name="Body_frame_text_small">Small</string>
    <string name="Bruce_trade_mill">Your Bruce trade mill is :</string>
    <string name="Burn_Calories">Burn Calories</string>
    <string name="Calculate_BMI">Calculate BMI</string>
    <string name="Calculate_BMR">Calculate Basal Metabolic Rate</string>
    <string name="Calculate_Blood_Alcohol_Content">Calculate Blood Alcohol Content</string>
    <string name="Calculate_Blood_Pressure">Calculate Blood Pressure</string>
    <string name="Calculate_Blood_Sugar">Calculate Blood Sugar</string>
    <string name="Calculate_Blood_volume">Calculate Blood Volume</string>
    <string name="Calculate_Body_Fat">Calculate Body Fat</string>
    <string name="Calculate_Bruce_Trade_Mill">Calculate Bruce Trade Mill</string>
    <string name="Calculate_Daily_Calories_Intake">Calculate Daily Calories Intake</string>
    <string name="Calculate_Estimated_Height">Calculate Estimated Height</string>
    <string name="Calculate_Estimated_Weight">Calculate Estimated Weight</string>
    <string name="Calculate_Expected_Date_of_Delivery">Calculate Expected Date of Delivery</string>
    <string name="Calculate_Head_Circumference">Calculate Head Circumference</string>
    <string name="Calculate_Heart_Rate">Calculate Heart Rate</string>
    <string name="Calculate_Next_Eligible_Date">Calculate Next Eligible Date</string>
    <string name="Calculate_RMR">Calculate Resting Metabolic Rate</string>
    <string name="Calculate_Smoking_Risk">Calculate Smoking Risk</string>
    <string name="Calculate_Smoking_cost">Calculate Smoking cost</string>
    <string name="Calculate_Your_Total_Calorie_Burn">Calculate Your Total Calorie Burn</string>
    <string name="Calculate_childs_Predicted_Height">Calculate child\'s Predicted Height</string>
    <string name="Calculate_next_menstrual">Calculate next menstrual &amp; ovulation date</string>
    <string name="Calculate_water_intake">Calculate water intake</string>
    <string name="Calorie_Requirements_a_Day_for_Men">Calorie Requirements a Day for Men</string>
    <string name="Calorie_Requirements_a_Day_for_Women">Calorie Requirements a Day for Women</string>
    <string name="Calories_Burned_Calculator">Calories Burned Calculator</string>
    <string name="Calories_burned">Calories burned</string>
    <string name="Calories_per_day">Calories per day</string>
    <string name="Calories_per_day_will_cause_you_to_Lose_one_pound_a_week">Calories per day will cause you to Lose one pound a week.</string>
    <string name="Calories_per_day_will_cause_you_to_gain_one_pound_a_week">Calories per day will cause you to gain one pound a week.</string>
    <string name="Children">Children</string>
    <string name="Childrens_Height_Predictor">Children\'s Height Predictor</string>
    <string name="Classification">Classification</string>
    <string name="Confusion_dizziness">Confusion, dizziness, exaggerated emotions (anger, fear, grief) impaired visual perception, decreased pain sensation, impaired balance, staggering gait, slurred speech, moderate muscular incoordination</string>
    <string name="Daily_Calories_Intake_Calculator">Daily Calories Intake Calculator</string>
    <string name="Daily_Water_Intake">Your Daily Water Intake is :</string>
    <string name="Date_of_Next_donation">Date of Next donation</string>
    <string name="Date_of_last_Menstrual">Date of last Menstrual</string>
    <string name="Date_of_last_donation">Date of last donation</string>
    <string name="Date_of_next_Menstrual">Date of next Menstrual</string>
    <string name="Date_of_the_first_day_of_your_last_period_is">Date of the first day of your last period is</string>
    <string name="Day">Day</string>
    <string name="Days">Days</string>
    <string name="Days_21">21 Days</string>
    <string name="Diastolic_Blood_Pressure">Diastolic Blood Pressure</string>
    <string name="Diastolic_mmHg">Diastolic mmHg</string>
    <string name="Drink_volume">Drink volume ( ml )</string>
    <string name="Emotional_instability">Emotional instability, loss of critical judgment, impairment of memory and comprehension, decreased sensory response, mild muscular incoordination</string>
    <string name="Enter_Age">Enter Age</string>
    <string name="Enter_Alcohol_level">Enter Alcohol level</string>
    <string name="Enter_Blood_sugar_value">Enter Blood sugar value</string>
    <string name="Enter_Distance_You_Run">Enter Distance You Run</string>
    <string name="Enter_Drink_volume">Enter Drink volume</string>
    <string name="Enter_Fathers_Height">Enter Father\'s Height</string>
    <string name="Enter_Heart_Rate">Enter Heart Rate</string>
    <string name="Enter_Height">Enter Height</string>
    <string name="Enter_Mothers_Height">Enter Mother\'s Height</string>
    <string name="Enter_Systolic_Pressure">Enter Systolic Pressure(Upper)mmHg</string>
    <string name="Enter_Weight">Enter Weight</string>
    <string name="Enter_diastolic_Pressure">Enter diastolic Pressure(Upper)mmHg</string>
    <string name="Enter_diastolic_value">Enter diastolic value</string>
    <string name="Enter_distance_you_run">Enter distance you run</string>
    <string name="Enter_no_of_cigarattes_per_day">Enter no of cigarattes per day</string>
    <string name="Enter_no_of_cigarettes">Enter no of cigarettes</string>
    <string name="Female">Female</string>
    <string name="High">High</string>
    <string name="Low">Low</string>
    <string name="Male">Male</string>
    <string name="Moderate">Moderate</string>
    <string name="friday">Fri</string>
    <string name="health_risk_title">Health Risk</string>
    <string name="monday">Mon</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>
    <string name="thrusday">Thu</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="whr">Waist To Hip Ratio Calculator</string>
    <string name="whr_chart">Waist-to-hip ratio chart</string>
    <string name="whr_chart_man1">0.95 or lower</string>
    <string name="whr_chart_man2">0.96–1.0</string>
    <string name="whr_chart_man3">1.0 or higher</string>
    <string name="whr_chart_woman1">0.80 or lower</string>
    <string name="whr_chart_woman2">0.81–0.85</string>
    <string name="whr_chart_woman3">0.86 or higher</string>
    <string name="action_settings">Settings</string>
    <string name="action_main">Pedometer</string>
    <string name="action_training">Training</string>
    <string name="pref_header_general">General</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_header_walking_modes">Walking modes</string>
    <string name="training_card_distance_km">km</string>
    <string name="action_distance_measurement">Distance Measurement</string>
    <string name="distance_measurement_stop_button">Stop distance measurement</string>
    <string name="distance_measurement_start_button">Start distance measurement</string>
</resources>