<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_color"
    android:orientation="vertical">
    <RelativeLayout
        android:id="@+id/rela1"
        android:background="@drawable/a1_grad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="30dp"
            android:padding="8dp"
            android:src="@mipmap/left_arrow" />
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:layout_toRightOf="@+id/iv_back"
        android:gravity="center"
        android:layout_marginBottom="5dp"
        android:text="@string/whr"
        android:textColor="@color/white"
        android:textSize="@dimen/textsize_16" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rela1"
        android:layout_marginBottom="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="vertical"
                android:visibility="visible">

                <TextView
                    android:id="@+id/tv_bodyfat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/whr_chart"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/textsize_16" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/corner1"
                    android:padding="10dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_fat_level"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/health_risk_title"
                            android:textColor="@color/black"
                            android:textSize="@dimen/textsize_14" />

                        <TextView
                            android:id="@+id/tv_men_fatlevel"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/Female"
                            android:textColor="@color/black"
                            android:textSize="@dimen/textsize_14" />



                        <TextView
                            android:id="@+id/tv_women_fatlevel"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/Male"
                            android:textColor="@color/black"
                            android:textSize="@dimen/textsize_14" />
                    </LinearLayout>


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginTop="3dp"
                        android:background="@color/colorPrimaryDark"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_vlow_fat"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/Low"
                            android:textColor="@color/black"
                            android:textSize="@dimen/textsize_14" />

                        <TextView
                            android:id="@+id/tv_vlow_fat_man"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/whr_chart_woman1"
                            android:textColor="@color/black"
                            android:textSize="@dimen/textsize_14" />

                        <TextView
                            android:id="@+id/tv_vlow_fat_woman"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/whr_chart_man1"
                            android:textColor="@color/black"
                            android:textSize="@dimen/textsize_14" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_low_fat"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/Moderate"
                            android:textColor="@color/black"
                            android:textSize="@dimen/textsize_14" />

                        <TextView
                            android:id="@+id/tv_low_fat_man"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/whr_chart_woman2"
                            android:textColor="@color/black"
                            android:textSize="@dimen/textsize_14" />

                        <TextView
                            android:id="@+id/tv_low_fat_woman"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/whr_chart_man2"
                            android:textColor="@color/black"
                            android:textSize="@dimen/textsize_14" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_avg_fat"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/High"
                            android:textColor="@color/black"
                            android:textSize="@dimen/textsize_14" />

                        <TextView
                            android:id="@+id/tv_avg_fat_man"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/whr_chart_woman3"
                            android:textColor="@color/black"
                            android:textSize="@dimen/textsize_14" />

                        <TextView
                            android:id="@+id/tv_avg_fat_woman"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/whr_chart_man3"
                            android:textColor="@color/black"
                            android:textSize="@dimen/textsize_14" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <include
        android:id="@+id/ad_layout"
        layout="@layout/native_ad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center" />
</RelativeLayout>
