<?xml version="1.0" encoding="utf-8"?>
<com.homeworkouts.fitnessloseweight.shashikant.calendar.ExpandableScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:id="@+id/scrollView1" android:background="@color/background_calendar" android:layout_width="wrap_content" android:layout_height="wrap_content">
    <RelativeLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:id="@+id/linearlayout_header" android:paddingTop="10dp" android:paddingBottom="10dp" android:layout_width="match_parent" android:layout_height="wrap_content">
            <RelativeLayout android:id="@+id/linearlayout_header_month" android:paddingLeft="20dp" android:paddingRight="20dp" android:layout_width="match_parent" android:layout_height="wrap_content">
                <ImageView android:id="@+id/imageview_previous" android:layout_width="24dp" android:layout_height="24dp" android:src="@drawable/calendar_arrow_left" android:layout_alignParentLeft="true"/>
                <TextView android:textSize="@dimen/text_16" android:textColor="#ffffff" android:textColorHint="#ffffff" android:id="@+id/textview_month_title" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Month" android:lines="1" android:layout_centerHorizontal="true"/>
                <ImageView android:id="@+id/imageview_next" android:layout_width="24dp" android:layout_height="24dp" android:src="@drawable/calendar_arrow_right" android:layout_alignParentRight="true"/>
            </RelativeLayout>
            <View android:background="#ffffff" android:layout_width="match_parent" android:layout_height="0.5dp" android:layout_marginTop="10dp"/>
            <LinearLayout android:orientation="horizontal" android:id="@+id/linearlayout_header_days" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp">
                <TextView android:textSize="@dimen/text_14" android:textColor="#ffffff" android:textColorHint="#ffffff" android:gravity="center_horizontal" android:id="@+id/textview_sunday" android:background="@android:color/transparent" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/sunday" android:lines="1" android:layout_weight="1"/>
                <TextView android:textSize="@dimen/text_14" android:textColor="#ffffff" android:textColorHint="#ffffff" android:gravity="center_horizontal" android:id="@+id/textview_monday" android:background="@android:color/transparent" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/monday" android:lines="1" android:layout_weight="1"/>
                <TextView android:textSize="@dimen/text_14" android:textColor="#ffffff" android:textColorHint="#ffffff" android:gravity="center_horizontal" android:id="@+id/textview_tuesday" android:background="@android:color/transparent" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/tuesday" android:lines="1" android:layout_weight="1"/>
                <TextView android:textSize="@dimen/text_14" android:textColor="#ffffff" android:textColorHint="#ffffff" android:gravity="center_horizontal" android:id="@+id/textview_wednesday" android:background="@android:color/transparent" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/wednesday" android:lines="1" android:layout_weight="1"/>
                <TextView android:textSize="@dimen/text_14" android:textColor="#ffffff" android:textColorHint="#ffffff" android:gravity="center_horizontal" android:id="@+id/textview_thrusday" android:background="@android:color/transparent" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/thrusday" android:lines="1" android:layout_weight="1"/>
                <TextView android:textSize="@dimen/text_14" android:textColor="#ffffff" android:textColorHint="#ffffff" android:gravity="center_horizontal" android:id="@+id/textview_friday" android:background="@android:color/transparent" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/friday" android:lines="1" android:layout_weight="1"/>
                <TextView android:textSize="@dimen/text_14" android:textColor="#ffffff" android:textColorHint="#ffffff" android:gravity="center_horizontal" android:id="@+id/textview_saturday" android:background="@android:color/transparent" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/saturday" android:lines="1" android:layout_weight="1"/>
            </LinearLayout>
        </LinearLayout>
        <com.homeworkouts.fitnessloseweight.shashikant.calendar.ExpandableHeightGridView
            android:gravity="center" android:layout_gravity="center_horizontal" android:id="@+id/gridview" android:layout_width="wrap_content" android:layout_height="wrap_content" android:listSelector="@android:color/transparent" android:stretchMode="columnWidth" android:numColumns="7" android:layout_below="@+id/linearlayout_header"/>
    </RelativeLayout>
</com.homeworkouts.fitnessloseweight.shashikant.calendar.ExpandableScrollView>
