<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/training_overview_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/gray_color"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="180dp"
                android:background="@drawable/corner2"
                android:layout_height="180dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="30dp"
                    android:src="@mipmap/icon_2" />

                <TextView
                    android:id="@+id/distance"
                    android:layout_below="@+id/imageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_centerVertical="true"
                    android:text="00:00"
                    android:textColor="@color/black"
                    android:textSize="39sp" />

                <TextView
                    android:id="@+id/distance_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"


                    android:layout_below="@+id/distance"
                    android:layout_centerHorizontal="true"
                    android:text="@string/training_card_distance_km"
                    android:textColor="@color/colorPrimaryDark" />
            </RelativeLayout>
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:baselineAligned="false">

    </LinearLayout>


        <RelativeLayout
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/text_20"
            android:background="@drawable/a3_grad"
            android:layout_height="wrap_content">

        <Button
            android:id="@+id/stop_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/distance_measurement_stop_button"
            android:textColor="@color/white"
            android:background="@drawable/a3_grad"
            android:visibility="gone"/>
        </RelativeLayout>

    <RelativeLayout
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/text_20"
        android:background="@drawable/a3_grad"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/start_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"

            android:text="@string/distance_measurement_start_button"
            android:textColor="@color/white"
            android:background="@drawable/a3_grad"/>
    </RelativeLayout>
</LinearLayout>